Feat(eos_designs): Enhance sFlow support

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/sflow-tests-l2-leaf2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/sflow-tests-l2-leaf2.cfg
@@ -8,11 +8,30 @@ service routing protocols model multi-agent
 !
 hostname sflow-tests-l2-leaf2
 !
+sflow vrf MGMT destination 10.10.10.13
+sflow vrf MGMT destination 10.10.10.14
+sflow vrf MGMT destination 10.10.10.17
+sflow vrf MGMT source-interface Management1
+sflow vrf sflowvrf destination 10.10.10.12
+sflow vrf sflowvrf destination 10.10.10.14
+sflow vrf sflowvrf destination 10.10.10.16
+sflow vrf sflowvrf destination 10.10.10.17
+sflow vrf sflowvrf source-interface Loopback321
+sflow destination 10.10.10.10
+sflow destination 10.10.10.11 1234
+sflow destination 10.10.10.15
+sflow destination 10.10.10.16
+sflow destination 10.10.10.17
+sflow source-interface Vlan4092
+!
 no enable password
 no aaa root
 !
 vlan 11
    name VLAN11
+!
+vlan 4092
+   name INBAND_MGMT
 !
 vrf instance MGMT
 !
@@ -20,7 +39,7 @@ interface Port-Channel1
    description SFLOW-TESTS-LEAF-MLAG_Po17
    no shutdown
    switchport
-   switchport trunk allowed vlan 11
+   switchport trunk allowed vlan 11,4092
    switchport mode trunk
    sflow enable
 !
@@ -39,9 +58,16 @@ interface Management1
    no shutdown
    vrf MGMT
    ip address 192.168.0.202/24
+!
+interface Vlan4092
+   description Inband Management
+   no shutdown
+   mtu 1500
+   ip address 10.254.254.5/24
 no ip routing vrf MGMT
 !
 ip route vrf MGMT 0.0.0.0/0 192.168.0.1
+ip route 0.0.0.0/0 10.254.254.1
 !
 management api http-commands
    protocol https
