--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/sflow-tests-leaf2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/sflow-tests-leaf2.cfg
@@ -8,6 +8,18 @@ service routing protocols model multi-agent
 !
 hostname sflow-tests-leaf2
 !
+sflow vrf MGMT destination 10.10.10.13
+sflow vrf MGMT destination 10.10.10.14
+sflow vrf MGMT destination 10.10.10.17
+sflow vrf MGMT source-interface Management1
+sflow vrf sflowvrf destination 10.10.10.12
+sflow vrf sflowvrf destination 10.10.10.14
+sflow vrf sflowvrf destination 10.10.10.16
+sflow vrf sflowvrf destination 10.10.10.17
+sflow vrf sflowvrf source-interface Loopback321
+sflow destination 10.10.10.10
+sflow destination 10.10.10.11 1234
+!
 spanning-tree mode mstp
 spanning-tree mst 0 priority 4096
 !
@@ -65,6 +77,8 @@ interface Vxlan1
    vxlan udp-port 4789
    vxlan vlan 11 vni 10011
    vxlan vrf VRF1 vni 1
+!
+ip virtual-router mac-address 00:11:22:33:44:55
 !
 ip routing
 no ip routing vrf MGMT
