--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/sflow-tests-spine1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/sflow-tests-spine1.cfg
@@ -8,6 +8,18 @@ service routing protocols model multi-agent
 !
 hostname sflow-tests-spine1
 !
+sflow vrf MGMT destination 10.10.10.13
+sflow vrf MGMT destination 10.10.10.14
+sflow vrf MGMT destination 10.10.10.17
+sflow vrf MGMT source-interface Management1
+sflow vrf sflowvrf destination 10.10.10.12
+sflow vrf sflowvrf destination 10.10.10.14
+sflow vrf sflowvrf destination 10.10.10.16
+sflow vrf sflowvrf destination 10.10.10.17
+sflow vrf sflowvrf source-interface Loopback321
+sflow destination 10.10.10.10
+sflow destination 10.10.10.11 1234
+!
 spanning-tree mode none
 !
 no enable password
