--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/sflow-tests-l2-leaf1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/sflow-tests-l2-leaf1.yml
@@ -4,6 +4,8 @@ static_routes:
 - vrf: MGMT
   destination_address_prefix: 0.0.0.0/0
   gateway: 192.168.0.1
+- destination_address_prefix: 0.0.0.0/0
+  gateway: 10.254.254.1
 service_routing_protocols_model: multi-agent
 vlan_internal_order:
   allocation: ascending
@@ -25,6 +27,29 @@ management_api_http:
   enable_vrfs:
   - name: MGMT
   enable_https: true
+sflow:
+  destinations:
+  - destination: 10.10.10.10
+  - destination: 10.10.10.11
+    port: 1234
+  - destination: 10.10.10.15
+  - destination: 10.10.10.16
+  - destination: 10.10.10.17
+  source_interface: Vlan4092
+  vrfs:
+  - name: sflowvrf
+    destinations:
+    - destination: 10.10.10.12
+    - destination: 10.10.10.14
+    - destination: 10.10.10.16
+    - destination: 10.10.10.17
+    source_interface: Loopback321
+  - name: MGMT
+    destinations:
+    - destination: 10.10.10.13
+    - destination: 10.10.10.14
+    - destination: 10.10.10.17
+    source_interface: Management1
 ethernet_interfaces:
 - name: Ethernet1
   peer: sflow-tests-leaf3
@@ -54,12 +79,22 @@ port_channel_interfaces:
   mode: trunk
   sflow:
     enable: true
-  vlans: '11'
+  vlans: 11,4092
 vlans:
 - id: 11
   name: VLAN11
   tenant: SFLOW
+- id: 4092
+  tenant: system
+  name: INBAND_MGMT
 ip_igmp_snooping:
   globally_enabled: true
+vlan_interfaces:
+- name: Vlan4092
+  description: Inband Management
+  shutdown: false
+  mtu: 1500
+  ip_address: 10.254.254.4/24
+  type: inband_mgmt
 metadata:
   platform: vEOS-lab
