--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/SFLOW_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/SFLOW_TESTS.yml
@@ -6,12 +6,40 @@ fabric_name: SFLOW_TESTS
 mgmt_gateway: 192.168.0.1
 
 fabric_sflow:
+  destinations:
+    - destination: 10.10.10.10
+    - destination: 10.10.10.11
+      port: 1234
+    - destination: 10.10.10.12
+      vrf: sflowvrf
+    - destination: 10.10.10.13
+      use_mgmt_interface_vrf: true
+    - destination: 10.10.10.14
+      vrf: sflowvrf
+      use_mgmt_interface_vrf: true
+    - destination: 10.10.10.15
+      use_inband_mgmt_vrf: true
+    - destination: 10.10.10.16
+      vrf: sflowvrf
+      use_inband_mgmt_vrf: true
+    - destination: 10.10.10.17
+      vrf: sflowvrf
+      use_mgmt_interface_vrf: true
+      use_inband_mgmt_vrf: true
   uplinks: true
   downlinks: true
   endpoints: true
   l3_edge: true
   core_interfaces: true
   mlag_interfaces: true
+  structured_config:
+    vrfs:
+      - name: sflowvrf
+        source_interface: Loopback321
+
+source_interfaces:
+  sflow:
+    mgmt_interface: true
 
 # P2P links between spine switches.
 core_interfaces:
