--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/sflow_settings.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/sflow_settings.schema.yml
@@ -14,7 +14,7 @@ keys:
       sFlow settings.
       The sFlow process will only be configured if any interface is enabled for sFlow.
       For source-interfaces see "source_interfaces.sflow"
-      For default enabling of sFlow for varous interface types across the fabric see "fabric_sflow"
+      For default enabling of sFlow for various interface types across the fabric see "fabric_sflow"
     keys:
       destinations:
         type: list
@@ -35,20 +35,20 @@ keys:
               type: str
               description: |-
                 VRF Name.
-                Can be used in combination with "use_mgmt_interface_vrf" and "use_inband_mgmt_vrf" to configure the destination under multiple VRFs.
+                Can be used in combination with `use_mgmt_interface_vrf` and `use_inband_mgmt_vrf` to configure the destination under multiple VRFs.
               convert_types:
                 - int
             use_mgmt_interface_vrf:
               type: bool
               description:
-                Configure the destination under the VRF set with "mgmt_interface_vrf".
-                Can be used in combination with "vrf" and "use_inband_mgmt_vrf" to configure the destination under multiple VRFs.
+                Configure the destination under the VRF set with `mgmt_interface_vrf`.
+                Can be used in combination with `vrf` and `use_inband_mgmt_vrf` to configure the destination under multiple VRFs.
             use_inband_mgmt_vrf:
               type: bool
               description:
-                Configure the destination under the VRF set with "inband_mgmt_vrf".
+                Configure the destination under the VRF set with `inband_mgmt_vrf`.
                 Ignored if inband management is not configured for the device.
-                Can be used in combination with "vrf" and "use_mgmt_interface_vrf" to configure the destination under multiple VRFs.
+                Can be used in combination with `vrf` and `use_mgmt_interface_vrf` to configure the destination under multiple VRFs.
       structured_config:
         type: dict
         description: Custom structured config added under sflow for eos_cli_config_gen
