Add isort to test req

--- a/python-avd/tox.ini
+++ b/python-avd/tox.ini
@@ -19,6 +19,7 @@ deps =
     pytest
     PyYAML>=6.0.0
     pydantic>=2.3.0
+    isort
 extras = mdtoc
 commands =
     make test-dep
@@ -32,6 +33,7 @@ deps =
     PyYAML>=6.0.0
     pydantic>=2.3.0
     coverage[toml]
+    isort
 commands =
     coverage erase
     # posargs allows to run only a specific test using
