Simplify data model

--- a/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
@@ -106,6 +106,8 @@ all:
         source-interfaces-tacacs-missing-inband-mgmt-interface:
         source-interfaces-tacacs-missing-mgmt-ip:
         ul-filter-evpn-default-vrf-services:
+        sflow-settings-missing-inband-mgmt-interface:
+        sflow-settings-missing-mgmt-ip:
       children:
         duplicate-ip-address-router-bgp:
           hosts:
