--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/sflow-tests-leaf1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/sflow-tests-leaf1.cfg
@@ -8,17 +8,10 @@ service routing protocols model multi-agent
 !
 hostname sflow-tests-leaf1
 !
-sflow vrf MGMT destination 10.10.10.13
-sflow vrf MGMT destination 10.10.10.14
-sflow vrf MGMT destination 10.10.10.17
+sflow vrf MGMT destination 10.10.10.10
 sflow vrf MGMT source-interface Management1
-sflow vrf sflowvrf destination 10.10.10.12
-sflow vrf sflowvrf destination 10.10.10.14
-sflow vrf sflowvrf destination 10.10.10.16
-sflow vrf sflowvrf destination 10.10.10.17
+sflow vrf sflowvrf destination 10.10.10.12 1234
 sflow vrf sflowvrf source-interface Loopback321
-sflow destination 10.10.10.10
-sflow destination 10.10.10.11 1234
 sflow run
 !
 spanning-tree mode mstp
