--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/fabric_sflow.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/fabric_sflow.schema.yml
@@ -13,6 +13,7 @@ keys:
     description: |-
       Default enabling of sFlow for various interface types across the fabric.
       sFlow can also be enabled/disabled under each of the specific data models.
+      For general sFlow settings see `sflow_settings`.
     keys:
       uplinks:
         description: Enable sFlow on all fabric uplinks.
