--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/SFLOW_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/SFLOW_TESTS.yml
@@ -8,24 +8,10 @@ mgmt_gateway: 192.168.0.1
 sflow_settings:
   destinations:
     - destination: 10.10.10.10
-    - destination: 10.10.10.11
-      port: 1234
+      vrf: use_mgmt_interface_vrf
     - destination: 10.10.10.12
       vrf: sflowvrf
-    - destination: 10.10.10.13
-      use_mgmt_interface_vrf: true
-    - destination: 10.10.10.14
-      vrf: sflowvrf
-      use_mgmt_interface_vrf: true
-    - destination: 10.10.10.15
-      use_inband_mgmt_vrf: true
-    - destination: 10.10.10.16
-      vrf: sflowvrf
-      use_inband_mgmt_vrf: true
-    - destination: 10.10.10.17
-      vrf: sflowvrf
-      use_mgmt_interface_vrf: true
-      use_inband_mgmt_vrf: true
+      port: 1234
   structured_config:
     vrfs:
       - name: sflowvrf
@@ -38,10 +24,6 @@ fabric_sflow:
   l3_edge: true
   core_interfaces: true
   mlag_interfaces: true
-
-source_interfaces:
-  sflow:
-    mgmt_interface: true
 
 # P2P links between spine switches.
 core_interfaces:
