--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -1205,7 +1205,9 @@ keys:
     description: 'Default enabling of sFlow for various interface types across the
       fabric.
 
-      sFlow can also be enabled/disabled under each of the specific data models.'
+      sFlow can also be enabled/disabled under each of the specific data models.
+
+      For general sFlow settings see `sflow_settings`.'
     keys:
       uplinks:
         description: Enable sFlow on all fabric uplinks.
@@ -2880,8 +2882,6 @@ keys:
 
       The sFlow process will only be configured if any interface is enabled for sFlow.
 
-      For source-interfaces see "source_interfaces.sflow"
-
       For default enabling of sFlow for various interface types across the fabric
       see "fabric_sflow"'
     keys:
@@ -2900,24 +2900,21 @@ keys:
               convert_types:
               - str
             vrf:
+              required: true
               type: str
-              description: 'VRF Name.
-
-                Can be used in combination with `use_mgmt_interface_vrf` and `use_inband_mgmt_vrf`
-                to configure the destination under multiple VRFs.'
+              description: "The value of `vrf` will be interpreted according to these
+                rules:\n- `use_mgmt_interface_vrf` will configure the sFlow destination
+                under the VRF set with `mgmt_interface_vrf` and set the `mgmt_interface`
+                as sFlow source-interface.\n  An error will be raised if `mgmt_ip`
+                or `ipv6_mgmt_ip` are not configured for the device.\n- `use_inband_mgmt_vrf`
+                will configure the NTP server(s) under the VRF set with `inband_mgmt_vrf`
+                and set the `inband_mgmt_interface` as NTP source-interface.\n  An
+                error will be raised if inband management is not configured for the
+                device.\n- Any other string will be used directly as the VRF name
+                but source interface must be set with `sflow.structured_config` as
+                needed."
               convert_types:
               - int
-            use_mgmt_interface_vrf:
-              type: bool
-              description: Configure the destination under the VRF set with `mgmt_interface_vrf`.
-                Can be used in combination with `vrf` and `use_inband_mgmt_vrf` to
-                configure the destination under multiple VRFs.
-            use_inband_mgmt_vrf:
-              type: bool
-              description: Configure the destination under the VRF set with `inband_mgmt_vrf`.
-                Ignored if inband management is not configured for the device. Can
-                be used in combination with `vrf` and `use_mgmt_interface_vrf` to
-                configure the destination under multiple VRFs.
       structured_config:
         type: dict
         description: Custom structured config added under sflow for eos_cli_config_gen
@@ -3190,25 +3187,6 @@ keys:
             type: bool
             description: 'Configure an IP Radius source-interface with the interface
               set by `inband_mgmt_interface` for the VRF set by `inband_mgmt_vrf`.
-
-              `inband_mgmt_interface` is typically a loopback or SVI interface, and
-              can be set under the node settings.'
-      sflow:
-        type: dict
-        description: sFlow source-interfaces.
-        keys:
-          mgmt_interface:
-            type: bool
-            description: 'Configure a sFlow source-interface with the interface set
-              by `mgmt_interface` and the VRF set by `mgmt_interface_vrf`.
-
-              `mgmt_interface` is typically the out-of-band Management interface,
-              and can be set under the node settings, platform settings or as a group/host
-              var.'
-          inband_mgmt_interface:
-            type: bool
-            description: 'Configure a sFlow source-interface with the interface set
-              by `inband_mgmt_interface` and the VRF set by `inband_mgmt_vrf`.
 
               `inband_mgmt_interface` is typically a loopback or SVI interface, and
               can be set under the node settings.'
