--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/sflow_settings.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/sflow_settings.schema.yml
@@ -13,7 +13,6 @@ keys:
     description: |-
       sFlow settings.
       The sFlow process will only be configured if any interface is enabled for sFlow.
-      For source-interfaces see "source_interfaces.sflow"
       For default enabling of sFlow for various interface types across the fabric see "fabric_sflow"
     keys:
       destinations:
@@ -32,23 +31,17 @@ keys:
               convert_types:
                 - str
             vrf:
+              required: true
               type: str
               description: |-
-                VRF Name.
-                Can be used in combination with `use_mgmt_interface_vrf` and `use_inband_mgmt_vrf` to configure the destination under multiple VRFs.
+                The value of `vrf` will be interpreted according to these rules:
+                - `use_mgmt_interface_vrf` will configure the sFlow destination under the VRF set with `mgmt_interface_vrf` and set the `mgmt_interface` as sFlow source-interface.
+                  An error will be raised if `mgmt_ip` or `ipv6_mgmt_ip` are not configured for the device.
+                - `use_inband_mgmt_vrf` will configure the NTP server(s) under the VRF set with `inband_mgmt_vrf` and set the `inband_mgmt_interface` as NTP source-interface.
+                  An error will be raised if inband management is not configured for the device.
+                - Any other string will be used directly as the VRF name but source interface must be set with `sflow.structured_config` as needed.
               convert_types:
                 - int
-            use_mgmt_interface_vrf:
-              type: bool
-              description:
-                Configure the destination under the VRF set with `mgmt_interface_vrf`.
-                Can be used in combination with `vrf` and `use_inband_mgmt_vrf` to configure the destination under multiple VRFs.
-            use_inband_mgmt_vrf:
-              type: bool
-              description:
-                Configure the destination under the VRF set with `inband_mgmt_vrf`.
-                Ignored if inband management is not configured for the device.
-                Can be used in combination with `vrf` and `use_mgmt_interface_vrf` to configure the destination under multiple VRFs.
       structured_config:
         type: dict
         description: Custom structured config added under sflow for eos_cli_config_gen
