--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -2883,7 +2883,7 @@ keys:
       The sFlow process will only be configured if any interface is enabled for sFlow.
 
       For default enabling of sFlow for various interface types across the fabric
-      see "fabric_sflow"'
+      see "fabric_sflow".'
     keys:
       destinations:
         type: list
@@ -2893,12 +2893,14 @@ keys:
             destination:
               type: str
               required: true
-              description: sFlow destination IP address.
+              description: sFlow destination name or IP address.
             port:
               type: int
-              description: Port number
+              description: UDP Port number. The default port number for sFlow is 6343.
               convert_types:
               - str
+              min: 1
+              max: 65535
             vrf:
               required: true
               type: str
