--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/sflow-tests-spine2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/sflow-tests-spine2.yml
@@ -154,6 +154,7 @@ sflow:
   - name: MGMT
     destinations:
     - destination: 10.10.10.10
+    - destination: 10.10.10.11
     source_interface: Management1
   - name: sflowvrf
     destinations:
