--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/sflow-tests-l2-leaf2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/sflow-tests-l2-leaf2.cfg
@@ -8,7 +8,10 @@ service routing protocols model multi-agent
 !
 hostname sflow-tests-l2-leaf2
 !
+sflow vrf MGMT destination 10.10.10.12
+sflow vrf MGMT source-interface Management1
 sflow destination 10.10.10.10
+sflow destination 10.10.10.11
 sflow source-interface Vlan4092
 sflow run
 !
