--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/sflow-tests-leaf2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/sflow-tests-leaf2.cfg
@@ -9,6 +9,7 @@ service routing protocols model multi-agent
 hostname sflow-tests-leaf2
 !
 sflow vrf MGMT destination 10.10.10.10
+sflow vrf MGMT destination 10.10.10.11
 sflow vrf MGMT source-interface Management1
 sflow vrf sflowvrf destination 10.10.10.12 1234
 sflow vrf sflowvrf source-interface Loopback321
