--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/sflow-tests-l2-leaf2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/sflow-tests-l2-leaf2.yml
@@ -77,6 +77,12 @@ sflow:
   run: true
   destinations:
   - destination: 10.10.10.10
+  - destination: 10.10.10.11
   source_interface: Vlan4092
+  vrfs:
+  - name: MGMT
+    destinations:
+    - destination: 10.10.10.12
+    source_interface: Management1
 metadata:
   platform: vEOS-lab
