--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/sflow_settings.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/sflow_settings.schema.yml
@@ -32,7 +32,6 @@ keys:
               min: 1
               max: 65535
             vrf:
-              required: true
               type: str
               description: |-
                 The value of `vrf` will be interpreted according to these rules:
@@ -41,8 +40,9 @@ keys:
                 - `use_inband_mgmt_vrf` will configure the NTP server(s) under the VRF set with `inband_mgmt_vrf` and set the `inband_mgmt_interface` as NTP source-interface.
                   An error will be raised if inband management is not configured for the device.
                 - Any other string will be used directly as the VRF name but source interface must be set with `sflow.structured_config` as needed.
+                If not set, the VRF is automatically picked up from the global setting `default_mgmt_method`.
               convert_types:
                 - int
       structured_config:
         type: dict
-        description: Custom structured config added under sflow for eos_cli_config_gen
+        description: Custom structured config added under `sflow` for `eos_cli_config_gen`.
