--- a/python-avd/tox.ini
+++ b/python-avd/tox.ini
@@ -17,6 +17,7 @@ allowlist_externals =
 deps =
     ansible-core<2.17
     pytest
+    pytest-benchmark
     PyYAML>=6.0.0
     pydantic>=2.3.0
     isort
@@ -30,6 +31,7 @@ commands =
 [testenv:coverage]
 deps =
     pytest
+    pytest-benchmark
     PyYAML>=6.0.0
     pydantic>=2.3.0
     coverage[toml]
