--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/sflow_settings.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/sflow_settings.schema.yml
@@ -34,13 +34,13 @@ keys:
             vrf:
               type: str
               description: |-
+                If not set, the VRF is automatically picked up from the global setting `default_mgmt_method`.
                 The value of `vrf` will be interpreted according to these rules:
                 - `use_mgmt_interface_vrf` will configure the sFlow destination under the VRF set with `mgmt_interface_vrf` and set the `mgmt_interface` as sFlow source-interface.
                   An error will be raised if `mgmt_ip` or `ipv6_mgmt_ip` are not configured for the device.
-                - `use_inband_mgmt_vrf` will configure the NTP server(s) under the VRF set with `inband_mgmt_vrf` and set the `inband_mgmt_interface` as NTP source-interface.
+                - `use_inband_mgmt_vrf` will configure the sFlow destination under the VRF set with `inband_mgmt_vrf` and set the `inband_mgmt_interface` as sFlow source-interface.
                   An error will be raised if inband management is not configured for the device.
                 - Any other string will be used directly as the VRF name but source interface must be set with `sflow.structured_config` as needed.
-                If not set, the VRF is automatically picked up from the global setting `default_mgmt_method`.
               convert_types:
                 - int
       structured_config:
