--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -2883,7 +2883,7 @@ keys:
       The sFlow process will only be configured if any interface is enabled for sFlow.
 
       For default enabling of sFlow for various interface types across the fabric
-      see "fabric_sflow".'
+      see `fabric_sflow`.'
     keys:
       destinations:
         type: list
