changed password in configs

--- a/ansible_collections/arista/avd/molecule/deploy_to_cv/intended/configs/s1-leaf1.cfg
+++ b/ansible_collections/arista/avd/molecule/deploy_to_cv/intended/configs/s1-leaf1.cfg
@@ -10,7 +10,7 @@ transceiver qsfp default-mode 4x10G
 !
 service routing protocols model multi-agent
 !
-hostname s1-leaf1-3
+hostname s1-leaf1
 dns domain atd.lab
 !
 ntp server 192.168.0.1 iburst local-interface Management0
@@ -24,7 +24,7 @@ aaa authorization exec default local
 no enable password
 no aaa root
 !
-username arista privilege 15 role network-admin secret arista123!
+username arista privilege 15 role network-admin secret arista123!!
 !
 vlan 10
    name Ten
@@ -98,3 +98,4 @@ management api http-commands
       no shutdown
 !
 end
+
