--- a/ansible_collections/arista/avd/molecule/deploy_to_cv/intended/configs/s1-leaf2.cfg
+++ b/ansible_collections/arista/avd/molecule/deploy_to_cv/intended/configs/s1-leaf2.cfg
@@ -10,7 +10,7 @@ transceiver qsfp default-mode 4x10G
 !
 service routing protocols model multi-agent
 !
-hostname s1-leaf2
+hostname s1-leaf2-2
 dns domain atd.lab
 !
 ntp server 192.168.0.1 iburst local-interface Management0
